--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/file-saver": "^1.3.0",
+    "@types/material-ui": "^0.21.1",
     "@types/react": "^16.3.5",
     "@types/react-dom": "^16.0.4",
     "babel-core": "^6.26.0",
@@ -40,6 +41,7 @@
   "dependencies": {
     "core-decorators": "^0.20.0",
     "file-saver": "^1.3.8",
+    "material-ui": "^0.20.0",
     "oni-save-parser": "^0.2.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
