--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/material-ui": "^0.21.1",
     "@types/react": "^16.3.5",
     "@types/react-dom": "^16.0.4",
+    "@types/react-select": "^1.2.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "cross-env": "^5.1.4",
@@ -44,6 +45,7 @@
     "material-ui": "^0.20.0",
     "oni-save-parser": "^0.2.3",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "react-select": "^1.2.1"
   }
 }
