--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A web-based Oxygen Not Included save file editor.",
   "main": "lib/index.js",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "webpack --config ./config/webpack.config.js",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.js",
     "deploy": "git subtree push --prefix dist origin gh-pages"
