Initial work on major rewrite
Use blueprintjs over phone-centric material-ui.
Webworkers for loading.
redux, saga, router, general goodness.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,6 +4,12 @@
         "jsx": "react",
         "module": "commonjs",
 
+        "lib": [
+            "dom",
+            "es6",
+            "webworker"
+        ],
+
         "strict": true,
 
         "esModuleInterop": true,
