--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
   "license": "MIT",
   "devDependencies": {
     "@types/file-saver": "^1.3.0",
-    "@types/material-ui": "^0.21.1",
     "@types/react": "^16.3.5",
     "@types/react-dom": "^16.0.4",
-    "@types/react-select": "^1.2.6",
+    "@types/react-redux": "^5.0.16",
+    "@types/react-router-dom": "^4.2.6",
+    "@types/react-transition-group": "^2.0.8",
+    "@types/redux": "^3.6.0",
+    "@types/redux-actions": "^2.2.4",
+    "@types/redux-devtools-extension": "^2.13.2",
+    "@types/reselect": "^2.2.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "cross-env": "^5.1.4",
@@ -38,15 +43,23 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "worker-loader": "^1.1.1"
   },
   "dependencies": {
+    "@blueprintjs/core": "^2.1.1",
     "core-decorators": "^0.20.0",
     "file-saver": "^1.3.8",
-    "material-ui": "^0.20.0",
-    "oni-save-parser": "^0.2.3",
+    "oni-save-parser": "git+https://github.com/RoboPhred/oni-save-parser.git#develop",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-select": "^1.2.1"
+    "react-files": "^2.4.5",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.3.0",
+    "redux": "^3.7.2",
+    "redux-actions": "^2.3.0",
+    "redux-devtools-extension": "^2.13.2",
+    "reselect": "^3.0.1"
   }
 }
