--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-actions": "^2.2.4",
     "@types/redux-devtools-extension": "^2.13.2",
+    "@types/redux-saga": "^0.10.5",
     "@types/reselect": "^2.2.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
@@ -60,6 +61,7 @@
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
     "redux-devtools-extension": "^2.13.2",
+    "redux-saga": "^0.16.0",
     "reselect": "^3.0.1"
   }
 }
