--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.8.3",
     "react-hot-loader": "^4.0.1",
     "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.7",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.3",
     "ts-loader": "^4.2.0",
