--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,7 @@
 {
-    "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
-        "**/.DS_Store": true,
+    "search.exclude": {
+        "**/node_modules": true,
+        "**/bower_components": true,
         "lib/**": true,
         "dist/**": true
     }
