--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^2.1.1",
+    "@blueprintjs/icons": "^2.1.1",
+    "@blueprintjs/select": "^2.0.0",
     "core-decorators": "^0.20.0",
     "file-saver": "^1.3.8",
-    "oni-save-parser": "git+https://github.com/RoboPhred/oni-save-parser.git#develop",
+    "oni-save-parser": "^1.0.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-files": "^2.4.5",
