--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.8.3",
+    "raw-loader": "^0.5.1",
     "react-hot-loader": "^4.0.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
@@ -56,16 +57,16 @@
     "@blueprintjs/select": "^2.0.0",
     "core-decorators": "^0.20.0",
     "file-saver": "^1.3.8",
-    "oni-save-parser": "^1.0.0",
+    "oni-save-parser": "^1.1.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-files": "^2.4.5",
+    "react-markdown": "^3.3.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.3.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
-    "redux-devtools-extension": "^2.13.2",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1",
     "uuid": "^3.2.1"
