--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -14,6 +14,11 @@
 
         "esModuleInterop": true,
         "experimentalDecorators": true,
+
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["./*"]
+        },
         
         "sourceMap": true
     }
