--- a/package.json
+++ b/package.json
@@ -51,10 +51,11 @@
     "@blueprintjs/select": "^2.0.0",
     "core-decorators": "^0.20.0",
     "file-saver": "^1.3.8",
+    "microinject": "^0.5.2",
     "mobx": "^4.2.0",
     "mobx-react": "^5.0.0",
-    "mobx-utils": "^4.0.0",
-    "oni-save-parser": "^1.5.1",
+    "mobx-utils": "^4.0.1",
+    "oni-save-parser": "^1.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.1",
     "react-files": "^2.4.5",
