--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
-    "search.exclude": {
-        "**/node_modules": true,
-        "**/bower_components": true,
-        "lib/**": true,
-        "dist/**": true
-    },
-    "emmet.showExpandedAbbreviation": "never",
-    "typescript.tsdk": "./node_modules/typescript/lib"
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/bower_components": true,
+    "lib/**": true,
+    "dist/**": true
+  },
+  "emmet.showExpandedAbbreviation": "never",
+  "typescript.tsdk": "./node_modules/typescript/lib",
+  "editor.tabSize": 2
 }
