--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/file-saver": "^1.3.0",
+    "@types/lodash-es": "^4.17.0",
     "@types/react": "^16.4.0",
     "@types/react-dom": "^16.0.6",
     "babel-core": "^6.26.3",
@@ -43,10 +44,13 @@
   "dependencies": {
     "core-decorators": "^0.20.0",
     "file-saver": "^1.3.8",
+    "lodash-es": "^4.17.10",
     "oni-save-parser": "^2.1.5",
+    "raw-loader": "^0.5.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-files": "^2.4.6",
-    "react-markdown": "^3.3.3"
+    "react-markdown": "^3.3.3",
+    "styled-components": "^3.3.2"
   }
 }
