--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^16.4.1",
     "react-files": "^2.4.6",
     "react-markdown": "^3.3.3",
+    "string-natural-compare": "^2.0.2",
     "styled-components": "^3.3.2"
   }
 }
