--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/lodash-es": "^4.17.0",
     "@types/react": "^16.4.0",
     "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "cross-env": "^5.2.0",
@@ -50,6 +51,9 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-markdown": "^3.3.3",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
     "string-natural-compare": "^2.0.2",
     "styled-components": "^3.3.2",
     "styled-system-html": "^1.0.3"
