--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "core-decorators": "^0.20.0",
     "file-saver": "^1.3.8",
+    "immer": "^1.3.1",
     "lodash-es": "^4.17.10",
     "oni-save-parser": "^2.1.5",
     "raw-loader": "^0.5.1",
@@ -54,6 +55,7 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
+    "reselect": "^3.0.1",
     "string-natural-compare": "^2.0.2",
     "styled-components": "^3.3.2",
     "styled-system-html": "^1.0.3"
