--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es6",
     "jsx": "react",
     "module": "commonjs",
+    "moduleResolution": "node",
 
     // Cannot use until https://github.com/Microsoft/TypeScript/pull/24959 is released.
     //"resolveJsonModule": true,
