--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/lodash-es": "^4.17.0",
     "@types/react": "^16.4.0",
     "@types/react-dom": "^16.0.6",
+    "@types/react-modal": "^3.1.2",
     "@types/react-redux": "^6.0.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -35,7 +36,7 @@
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.3",
     "ts-loader": "^4.4.1",
-    "typescript": "^2.9.2",
+    "typescript": "2.9.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^2.1.5",
@@ -45,13 +46,13 @@
   "dependencies": {
     "core-decorators": "^0.20.0",
     "file-saver": "^1.3.8",
-    "immer": "^1.3.1",
     "lodash-es": "^4.17.10",
     "oni-save-parser": "^2.1.5",
     "raw-loader": "^0.5.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-markdown": "^3.3.3",
+    "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
