--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "raw-loader": "^0.5.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-draggable": "^3.0.5",
     "react-markdown": "^3.3.3",
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
