--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^16.0.6",
     "@types/react-modal": "^3.1.2",
     "@types/react-redux": "^6.0.2",
+    "@types/styled-system": "^2.3.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "cross-env": "^5.2.0",
@@ -60,6 +61,7 @@
     "reselect": "^3.0.1",
     "string-natural-compare": "^2.0.2",
     "styled-components": "^3.3.2",
+    "styled-system": "^2.3.1",
     "styled-system-html": "^1.0.3"
   }
 }
