--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "core-decorators": "^0.20.0",
     "file-saver": "^1.3.8",
+    "immer": "^1.3.1",
     "lodash-es": "^4.17.10",
     "oni-save-parser": "^2.1.5",
     "raw-loader": "^0.5.1",
@@ -56,6 +57,7 @@
     "react-markdown": "^3.3.3",
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
+    "reduce-reducers": "^0.3.0",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1",
