--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "npm run clean",
     "build": "webpack --config ./config/webpack.config.js",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.js",
-    "deploy": "git subtree push --prefix dist origin gh-pages"
+    "deploy": "git subtree push --prefix dist origin vnext/gh-pages"
   },
   "private": true,
   "keywords": [
