--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,6 +4,7 @@
     "jsx": "react",
     "module": "commonjs",
     "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
 
     // Cannot use until https://github.com/Microsoft/TypeScript/pull/24959 is released.
     //"resolveJsonModule": true,
