--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "style-loader": "^0.20.3",
     "ts-loader": "^4.4.1",
     "typescript": "2.9.1",
+    "typescript-plugin-styled-components": "0.0.6",
     "url-loader": "^1.0.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^2.1.5",
