--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "core-decorators": "^0.20.0",
+    "csstype": "^2.5.5",
     "file-saver": "^1.3.8",
     "immer": "^1.3.1",
     "lodash-es": "^4.17.10",
