--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "immer": "^1.3.1",
     "lodash-es": "^4.17.10",
     "oni-save-parser": "^2.2.2",
+    "prettier": "^1.13.7",
     "raw-loader": "^0.5.1",
     "re-reselect": "^2.1.0",
     "react": "^16.4.1",
@@ -65,7 +66,7 @@
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1",
     "string-natural-compare": "^2.0.2",
-    "styled-components": "^3.3.2",
+    "styled-components": "^3.3.3",
     "styled-system": "^2.3.1",
     "styled-system-html": "^1.0.3"
   }
