--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^16.0.6",
     "@types/react-modal": "^3.1.2",
     "@types/react-redux": "^6.0.2",
+    "@types/react-select": "^1.2.8",
     "@types/styled-system": "^2.3.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -51,7 +52,7 @@
     "file-saver": "^1.3.8",
     "immer": "^1.3.1",
     "lodash-es": "^4.17.10",
-    "oni-save-parser": "^2.2.2",
+    "oni-save-parser": "^3.0.0",
     "prettier": "^1.13.7",
     "raw-loader": "^0.5.1",
     "re-reselect": "^2.1.0",
@@ -61,6 +62,7 @@
     "react-markdown": "^3.3.3",
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
+    "react-select": "^1.2.1",
     "reduce-reducers": "^0.3.0",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
