--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.3",
     "ts-loader": "^4.4.1",
-    "typescript": "2.9.1",
+    "typescript": "^2.9.2",
     "typescript-plugin-styled-components": "0.0.6",
     "url-loader": "^1.0.1",
     "webpack": "^4.12.0",
@@ -52,7 +52,7 @@
     "file-saver": "^1.3.8",
     "immer": "^1.3.1",
     "lodash-es": "^4.17.10",
-    "oni-save-parser": "^3.1.1",
+    "oni-save-parser": "^3.2.1",
     "prettier": "^1.13.7",
     "raw-loader": "^0.5.1",
     "re-reselect": "^2.1.0",
