--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/file-saver": "^1.3.0",
     "@types/lodash-es": "^4.17.0",
     "@types/react": "^16.4.0",
+    "@types/react-autocomplete": "^1.8.3",
     "@types/react-dom": "^16.0.6",
     "@types/react-modal": "^3.1.2",
     "@types/react-redux": "^6.0.4",
@@ -57,6 +58,7 @@
     "raw-loader": "^0.5.1",
     "re-reselect": "^2.1.0",
     "react": "^16.4.1",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^16.4.1",
     "react-draggable": "^3.0.5",
     "react-markdown": "^3.3.3",
