--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "core-decorators": "^0.20.0",
     "csstype": "^2.5.5",
+    "dom-scroll-into-view": "^1.2.1",
     "file-saver": "^1.3.8",
     "immer": "^1.3.1",
     "lodash-es": "^4.17.10",
