--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-modal": "^3.1.2",
     "@types/react-redux": "^6.0.4",
     "@types/react-select": "^1.2.8",
+    "@types/react-table": "^6.7.11",
     "@types/styled-system": "^2.3.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -66,6 +67,7 @@
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
     "react-select": "^1.2.1",
+    "react-table": "^6.8.6",
     "reduce-reducers": "^0.3.0",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
