--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/file-saver": "^1.3.0",
     "@types/lodash-es": "^4.17.0",
+    "@types/platform": "^1.3.1",
     "@types/react": "^16.4.0",
     "@types/react-autocomplete": "^1.8.3",
     "@types/react-dom": "^16.0.6",
@@ -55,6 +56,7 @@
     "immer": "^1.3.1",
     "lodash-es": "^4.17.10",
     "oni-save-parser": "^5.0.0",
+    "platform": "^1.3.5",
     "prettier": "^1.13.7",
     "raw-loader": "^0.5.1",
     "re-reselect": "^2.1.0",
