--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/file-saver": "^1.3.0",
+    "@types/griddle-react": "^1.3.0",
     "@types/lodash-es": "^4.17.0",
     "@types/platform": "^1.3.1",
     "@types/react": "^16.4.0",
@@ -27,7 +28,6 @@
     "@types/react-dom": "^16.0.6",
     "@types/react-modal": "^3.1.2",
     "@types/react-redux": "^6.0.4",
-    "@types/react-table": "^6.7.11",
     "@types/styled-system": "^2.3.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -53,6 +53,7 @@
     "core-decorators": "^0.20.0",
     "dom-scroll-into-view": "^1.2.1",
     "file-saver": "^1.3.8",
+    "griddle-react": "^1.13.1",
     "immer": "^1.3.1",
     "lodash-es": "^4.17.10",
     "oni-save-parser": "^5.0.0",
@@ -67,7 +68,6 @@
     "react-markdown": "^3.3.3",
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
-    "react-table": "^6.8.6",
     "reduce-reducers": "^0.3.0",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
