--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   "license": "MIT",
   "devDependencies": {
     "@types/file-saver": "^1.3.0",
-    "@types/lodash-es": "^4.17.0",
+    "@types/lodash-es": "^4.17.1",
     "@types/platform": "^1.3.1",
-    "@types/react": "^16.4.0",
+    "@types/react": "^16.4.7",
     "@types/react-autocomplete": "^1.8.3",
     "@types/react-dom": "^16.0.6",
     "@types/react-modal": "^3.1.2",
-    "@types/react-redux": "^6.0.4",
+    "@types/react-redux": "^6.0.5",
     "@types/react-table": "^6.7.11",
     "@types/styled-system": "^2.3.0",
     "babel-core": "^6.26.3",
@@ -35,7 +35,7 @@
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "react-hot-loader": "^4.3.3",
+    "react-hot-loader": "^4.3.4",
     "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.3",
@@ -43,19 +43,19 @@
     "typescript": "^2.9.2",
     "typescript-plugin-styled-components": "0.0.6",
     "url-loader": "^1.0.1",
-    "webpack": "^4.16.0",
+    "webpack": "^4.16.3",
     "webpack-cli": "^2.1.5",
-    "webpack-dev-server": "^3.1.4",
+    "webpack-dev-server": "^3.1.5",
     "worker-loader": "^1.1.1"
   },
   "dependencies": {
     "core-decorators": "^0.20.0",
-    "csstype": "^2.5.5",
+    "csstype": "^2.5.6",
     "dom-scroll-into-view": "^1.2.1",
     "file-saver": "^1.3.8",
-    "immer": "^1.3.1",
+    "immer": "^1.5.0",
     "lodash-es": "^4.17.10",
-    "oni-save-parser": "^5.0.0",
+    "oni-save-parser": "^5.1.1",
     "platform": "^1.3.5",
     "prettier": "^1.13.7",
     "raw-loader": "^0.5.1",
@@ -64,7 +64,6 @@
     "react-autocomplete": "^1.8.1",
     "react-dom": "^16.4.1",
     "react-draggable": "^3.0.5",
-    "react-markdown": "^3.3.3",
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
     "react-table": "^6.8.6",
@@ -74,7 +73,6 @@
     "reselect": "^3.0.1",
     "string-natural-compare": "^2.0.2",
     "styled-components": "3.3.2",
-    "styled-system": "^2.3.6",
-    "styled-system-html": "^1.0.3"
+    "styled-system": "^2.3.6"
   }
 }
