--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prebuild": "npm run clean",
     "build": "webpack --config ./config/webpack.config.js",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.js",
+    "start:prod": "cross-env NODE_ENV=production webpack-dev-server --config ./config/webpack.config.js",
     "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "private": true,
