--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,7 @@ jobs:
 
       - run: npm ci
 
-      - run:
-          name: "Build"
-          command: npm run build
+      - run: npm run build
 
       - save_cache:
           paths:
@@ -56,12 +54,12 @@ jobs:
 
 workflows:
   version: 2
-    build-and-deploy:
-      filters:
-        branches:
-          only:
-            - master
-      jobs:
-        - build
-        - deploy:
-            requires: build
+  build-and-deploy:
+    filters:
+      branches:
+        only:
+          - master
+    jobs:
+      - build
+      - deploy:
+          requires: build
