--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,11 +55,16 @@ jobs:
 workflows:
   version: 2
   build-and-deploy:
-    filters:
-      branches:
-        only:
-          - master
     jobs:
       - build
+          filters:
+            branches:
+              only:
+                - master
       - deploy:
-          requires: build
+          requires: 
+            - build
+          filters:
+            branches:
+              only:
+                - master
