--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/file-saver": "^1.3.0",
-    "@types/lodash-es": "^4.17.1",
     "@types/griddle-react": "^1.3.0",
+    "@types/lodash-es": "^4.17.1",
     "@types/platform": "^1.3.1",
     "@types/react": "^16.4.7",
     "@types/react-autocomplete": "^1.8.3",
@@ -51,12 +51,16 @@
     "worker-loader": "^1.1.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
     "core-decorators": "^0.20.0",
     "csstype": "^2.5.6",
     "dom-scroll-into-view": "^1.2.1",
     "file-saver": "^1.3.8",
-    "immer": "^1.5.0",
     "griddle-react": "^1.13.1",
+    "immer": "^1.5.0",
     "lodash-es": "^4.17.10",
     "oni-save-parser": "^5.1.1",
     "platform": "^1.3.5",
