--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   "devDependencies": {
     "@types/file-saver": "^1.3.0",
     "@types/griddle-react": "^1.3.0",
+    "@types/i18next": "^8.4.4",
+    "@types/i18next-browser-languagedetector": "^2.0.1",
     "@types/lodash-es": "^4.17.1",
     "@types/platform": "^1.3.1",
     "@types/react": "^16.4.7",
     "@types/react-autocomplete": "^1.8.3",
     "@types/react-dom": "^16.0.6",
+    "@types/react-i18next": "^7.8.0",
     "@types/react-modal": "^3.1.2",
     "@types/react-redux": "^6.0.4",
     "@types/styled-system": "^2.3.2",
@@ -60,6 +63,8 @@
     "dom-scroll-into-view": "^1.2.1",
     "file-saver": "^1.3.8",
     "griddle-react": "^1.13.1",
+    "i18next": "^11.5.0",
+    "i18next-browser-languagedetector": "^2.2.2",
     "immer": "^1.5.0",
     "lodash-es": "^4.17.10",
     "oni-save-parser": "^5.1.1",
@@ -71,6 +76,7 @@
     "react-autocomplete": "^1.8.1",
     "react-dom": "^16.4.1",
     "react-draggable": "^3.0.5",
+    "react-i18next": "^7.10.1",
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
     "reduce-reducers": "^0.3.0",
