--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.3",
     "ts-loader": "^4.4.1",
-    "typescript": "^3.0.1",
+    "typescript": "^2.9.2",
     "typescript-plugin-styled-components": "0.0.6",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.3",
@@ -82,7 +82,7 @@
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1",
     "string-natural-compare": "^2.0.2",
-    "styled-components": "3.3.2",
+    "styled-components": "^3.3.2",
     "styled-system": "^2.3.6"
   }
 }
