--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "author": "William Matthews",
   "license": "MIT",
   "devDependencies": {
+    "@types/es6-promise": "^3.3.0",
     "@types/file-saver": "^2.0.0",
+    "@types/history": "^4.7.2",
     "@types/i18next": "^12.1.0",
     "@types/i18next-browser-languagedetector": "^2.0.2",
     "@types/lodash-es": "^4.17.2",
@@ -28,6 +30,8 @@
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
     "@types/react-redux": "^7.0.1",
+    "@types/react-router": "^4.4.4",
+    "@types/react-router-dom": "^4.3.1",
     "@types/reduce-reducers": "^0.2.1",
     "@types/webpack-env": "^1.13.7",
     "cross-env": "^5.2.0",
@@ -48,7 +52,11 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "connected-react-router": "^6.3.1",
+    "es6-promise": "^4.2.6",
     "file-saver": "^2.0.1",
+    "history": "^4.7.2",
     "i18next": "^15.0.4",
     "i18next-browser-languagedetector": "^3.0.0",
     "immer": "^2.0.0",
@@ -62,6 +70,8 @@
     "react-i18next": "^10.1.2",
     "react-oni-duplicant": "^0.1.2",
     "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "reduce-reducers": "^0.4.3",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.1",
