--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "platform": "^1.3.5",
     "prettier": "^1.16.4",
     "raw-loader": "^1.0.0",
+    "re-reselect": "^3.0.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-i18next": "^10.1.2",
