--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.30",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.3.1",
     "es6-promise": "^4.2.6",
