--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/history": "^4.7.2",
     "@types/i18next": "^12.1.0",
     "@types/lodash-es": "^4.17.2",
+    "@types/object-hash": "^1.2.0",
     "@types/platform": "^1.3.2",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
@@ -66,6 +67,7 @@
     "i18next": "^15.0.4",
     "immer": "^2.0.0",
     "lodash-es": "^4.17.11",
+    "object-hash": "^1.3.1",
     "oni-save-parser": "^5.1.5",
     "platform": "^1.3.5",
     "prettier": "^1.16.4",
