--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js",
+    "test": "jest",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.js",
     "start:prod": "cross-env NODE_ENV=production webpack-dev-server --config ./config/webpack.config.js",
     "deploy": "gh-pages -d dist -e vnext"
@@ -25,6 +26,7 @@
     "@types/file-saver": "^2.0.0",
     "@types/history": "^4.7.2",
     "@types/i18next": "^12.1.0",
+    "@types/jest": "^24.0.11",
     "@types/lodash-es": "^4.17.2",
     "@types/object-hash": "^1.2.0",
     "@types/platform": "^1.3.2",
@@ -40,12 +42,14 @@
     "file-loader": "^3.0.1",
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.5.0",
     "react-hot-loader": "^4.6.5",
     "rimraf": "^2.6.3",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
+    "ts-jest": "^24.0.0",
     "ts-loader": "^5.3.3",
-    "typescript": "^3.3.3",
+    "typescript": "^3.3.3333",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
