--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/classnames": "^2.2.7",
+    "@types/enzyme": "^3.9.0",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/es6-promise": "^3.3.0",
     "@types/file-saver": "^2.0.0",
     "@types/history": "^4.7.2",
@@ -36,14 +38,18 @@
     "@types/react-router": "^4.4.4",
     "@types/react-router-dom": "^4.3.1",
     "@types/reduce-reducers": "^0.2.1",
+    "@types/redux-mock-store": "^1.0.0",
     "@types/webpack-env": "^1.13.7",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "file-loader": "^3.0.1",
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.5.0",
     "react-hot-loader": "^4.6.5",
+    "redux-mock-store": "^1.5.3",
     "rimraf": "^2.6.3",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
