--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.js",
     "start:prod": "cross-env NODE_ENV=production webpack-dev-server --config ./config/webpack.config.js",
-    "deploy": "gh-pages -d dist -e vnext"
+    "deploy": "gh-pages -d dist"
   },
   "private": true,
   "keywords": [
