--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.5.0",
+    "monaco-editor-webpack-plugin": "^1.7.0",
     "react-hot-loader": "^4.6.5",
     "redux-mock-store": "^1.5.3",
     "rimraf": "^2.6.3",
@@ -86,6 +87,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-i18next": "^10.1.2",
+    "react-monaco-editor": "^0.25.1",
     "react-oni-duplicant": "^0.1.2",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
