--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react-redux": "^7.0.1",
     "@types/react-router": "^4.4.4",
     "@types/react-router-dom": "^4.3.1",
+    "@types/recompose": "^0.30.5",
     "@types/reduce-reducers": "^0.2.1",
     "@types/redux-mock-store": "^1.0.0",
     "@types/webpack-env": "^1.13.7",
@@ -56,7 +57,7 @@
     "style-loader": "^0.23.1",
     "ts-jest": "^24.0.0",
     "ts-loader": "^5.3.3",
-    "typescript": "^3.3.3333",
+    "typescript": "^3.4.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
@@ -92,6 +93,7 @@
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "recompose": "^0.30.0",
     "reduce-reducers": "^0.4.3",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.1",
