--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@types/react-redux": "^7.0.1",
     "@types/react-router": "^4.4.4",
     "@types/react-router-dom": "^4.3.1",
-    "@types/recompose": "^0.30.5",
     "@types/reduce-reducers": "^0.2.1",
     "@types/redux-mock-store": "^1.0.0",
     "@types/webpack-env": "^1.13.7",
@@ -79,8 +78,9 @@
     "i18next": "^15.0.4",
     "immer": "^2.0.0",
     "lodash-es": "^4.17.11",
+    "monaco-editor": "^0.15.6",
     "object-hash": "^1.3.1",
-    "oni-save-parser": "^5.2.1",
+    "oni-save-parser": "^6.0.1",
     "platform": "^1.3.5",
     "prettier": "^1.16.4",
     "raw-loader": "^1.0.0",
@@ -93,7 +93,6 @@
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "recompose": "^0.30.0",
     "reduce-reducers": "^0.4.3",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.1",
