--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/history": "^4.7.3",
     "@types/i18next": "^12.1.0",
     "@types/jest": "^24.0.21",
+    "@types/lodash": "^4.14.144",
     "@types/lodash-es": "^4.17.3",
     "@types/object-hash": "^1.3.0",
     "@types/platform": "^1.3.2",
@@ -76,7 +77,7 @@
     "file-saver": "^2.0.2",
     "history": "^4.10.1",
     "i18next": "^15.0.4",
-    "immer": "^3.2.0",
+    "lodash": "^4.17.15",
     "lodash-es": "^4.17.15",
     "object-hash": "^1.3.1",
     "oni-save-parser": "^7.2.0",
