--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
-    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack.config.js",
     "test": "jest",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.js",
-    "start:prod": "cross-env NODE_ENV=production webpack-dev-server --config ./config/webpack.config.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack.config.js",
+    "start:prod": "cross-env NODE_ENV=production webpack-dev-server --config ./webpack.config.js",
     "deploy": "gh-pages -d dist"
   },
   "private": true,
@@ -84,6 +84,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-i18next": "^10.1.2",
+    "react-markdown": "^4.3.1",
     "react-oni-duplicant": "^0.1.2",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
