--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "oni-duplicity",
+  "friendlyName": "Duplicity",
   "version": "3.14.0",
   "description": "A web-based Oxygen Not Included save file editor.",
   "main": "lib/index.js",
@@ -93,6 +94,8 @@
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
     "reselect": "^4.0.0",
-    "typeface-roboto": "0.0.75"
+    "typeface-roboto": "0.0.75",
+    "webpack-pwa-manifest": "^4.2.0",
+    "workbox-webpack-plugin": "^5.0.0"
   }
 }
