--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "i18next": "^17.0.0",
     "lodash": "^4.17.15",
     "object-hash": "^1.3.1",
-    "oni-save-parser": "^11.0.0",
+    "oni-save-parser": "11.1",
     "platform": "^1.3.5",
     "re-reselect": "^3.4.0",
     "react": "^16.11.0",
