--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/redux-mock-store": "^1.0.1",
     "@types/webpack-env": "^1.14.1",
     "cross-env": "^6.0.3",
-    "css-loader": "^3.2.0",
+    "css-loader": "^5.2.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "file-loader": "^4.2.0",
@@ -53,7 +53,7 @@
     "rimraf": "^3.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
-    "ts-jest": "^24.1.0",
+    "ts-jest": "^26.5.6",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.2",
     "url-loader": "^2.2.0",
@@ -77,13 +77,13 @@
     "i18next": "^17.0.0",
     "lodash": "^4.17.15",
     "object-hash": "^1.3.1",
-    "oni-save-parser": "11.1",
+    "oni-save-parser": "^12.0.0",
     "platform": "^1.3.5",
     "re-reselect": "^3.4.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-i18next": "^10.1.2",
-    "react-markdown": "^4.3.1",
+    "react-markdown": "^6.0.2",
     "react-oni-duplicant": "^0.1.2",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
