--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack.config.js",
     "start:prod": "cross-env NODE_ENV=production webpack-dev-server --config ./webpack.config.js",
-    "deploy": "gh-pages -d dist -r git@github.com:RoboPhred/oni-duplicity.git"
+    "deploy": "gh-pages -d dist -r https://github.com/RoboPhred/oni-duplicity"
   },
   "private": true,
   "keywords": [
